--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="container">
 
 <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1615829253947-faef9cf73097?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80')">
-<h3>Picture 1</h3>
+<h3>Picture one</h3>
 
 </div>
 
